--- a/package.json
+++ b/package.json
@@ -11,5 +11,9 @@
   "license": "ISC",
   "devDependencies": {
     "cypress": "^10.3.0"
+  },
+  "dependencies": {
+    "axios": "^0.27.2",
+    "dotenv": "^16.0.1"
   }
 }
